--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ server.port=8080
 
 # Gemini API Configuration
 gemini.api.url=https://generativelanguage.googleapis.com/v1/models/gemini-pro:generateContent
-gemini.api.key=AIzaSyAED2X6awFCn7-M9SGMV667y_01_Ykhgkk
+gemini.api.key=
